2008-06-02 [colin]	3.4.0cvs77

	* src/quote_fmt.c
		Fix sensitivity/alignment, patch from
		Pawel

2008-05-31 [colin]	3.4.0cvs76

	* src/imap.c
		Fix login issue introduced in cvs75.

2008-05-31 [colin]	3.4.0cvs75

	* src/imap.c
		Fix more possible double-frees. Also, fix the root cause
		of these double-frees by just noting the Session is to
		be destroyed instead of destroying it in flight

2008-05-29 [paul]	3.4.0cvs74

	* manual/keyboard.xml
		'Makes' these entries like the others

2008-05-29 [colin]	3.4.0cvs73

	* src/procmsg.h
		Include utils.h in case we
		need to pull goffset definition

2008-05-29 [colin]	3.4.0cvs72

	* src/common/utils.h
		Workaround a stupid Glib issue, where
		goffset happens to be undefined. 

2008-05-28 [colin]	3.4.0cvs71

	* src/compose.c
	* src/compose.h
	* src/grouplistdialog.c
	* src/image_viewer.c
	* src/imap.c
	* src/inc.c
	* src/main.c
	* src/matcher.c
	* src/messageview.c
	* src/mimeview.c
	* src/prefs_themes.c
	* src/procmsg.h
	* src/summaryview.c
	* src/summaryview.h
	* src/textview.c
	* src/common/smtp.c
	* src/common/utils.c
	* src/common/utils.h
		Use goffset instead of off_t for MsgInfo's size
		Allows using MsgInfo structure from plugins
		compiled with largefile support

2008-05-26 [colin]	3.4.0cvs70

	* src/mainwindow.c
	* src/mainwindow.h
		Define THEME_CHANGED_HOOKLIST and invoke
		it on theme change
	* src/plugins/trayicon/trayicon.c
		Listen to THEME_CHANGED_HOOKLIST and
		update accordingly

2008-05-26 [paul]	3.4.0cvs69

	* src/mimeview.c
		plug a leak in mimeview_save_all()

2008-05-24 [colin]	3.4.0cvs68

	* src/common/utils.h
		Fix wrong define on old glibs

2008-05-24 [paul]	3.4.0cvs67

	* src/Makefile.am
	* src/stock_pixmap.c
	* src/stock_pixmap.h
	* src/toolbar.c
	* src/pixmaps/cancel.xpm
	* src/pixmaps/close.xpm
		add a specific icon for A_CANCEL_INC (addresses
		point 1 of bug 1609 'Icon issues')
		replace close.xpm with an icon of the standard
		24x24 size

2008-05-24 [paul]	3.4.0cvs66
