@@ -3373,3 +3373,4 @@
 ( cvs diff -u -r 1.179.2.223 -r 1.179.2.224 src/imap.c;  ) > 3.4.0cvs75.patchset
 ( cvs diff -u -r 1.179.2.224 -r 1.179.2.225 src/imap.c;  ) > 3.4.0cvs76.patchset
 ( cvs diff -u -r 1.8.2.34 -r 1.8.2.35 src/quote_fmt.c;  ) > 3.4.0cvs77.patchset
+( cvs diff -u -r 1.60.2.56 -r 1.60.2.57 src/prefs_actions.c;  ) > 3.4.0cvs78.patchset
